--- a/templates/Add.html
+++ b/templates/Add.html
@@ -15,6 +15,19 @@
     <a href="Add.html" style="text-align: right"> Add a Pokemon </a>
         </br>
 
- this is where the form will be
+<br>
+<br>
+<br>
+
+Name: <input type="text" name="Name"> <br>
+Type: <input type="text" name="Type"> <br>
+Generation: <input type="text" name="Generation"> <br>
+Legendary: <input type="checkbox" name="Legendary" CHECKED> <br>
+HP: <input type="text" name="HP"> <br>
+Attack: <input type="text" name="Attack"> <br>
+Defense: <input type="text" name="Defense"> <br>
+
+<button type="submit" value="Send"> Submit </button>
+
 </body>
 </html>
