--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
 <body>
 {% load static %}
-
+<link rel="stylesheet" href="{%  static 'style.css' %}">
 
     <a href="index.html" style="text-align: right"> Home </a>
         </br>
@@ -16,8 +16,8 @@
     <a href="Add.html" style="text-align: right"> Add a Pokemon </a>
         </br>
 
-<link rel="stylesheet" href="{%  static 'style.css' %}">
-<h1> Pockemon League Website! </h1> <br><br>
+
+<h1> Pokemon League Website! </h1> <br><br>
 <h2>
     Welcome to Mor&Maor's Official Pokemon League! <br>
     We do not particularly enjoy Django but we get along <br>
