--- a/static/style.css
+++ b/static/style.css
@@ -1,26 +1,149 @@
-body{
-    background-image: url("pikapika.jpg");
-    background-position: left;
+html, body {
+  background-image: url("pikapika.jpg");
+  opacity: 0.9;
+  background-position: left;
+  height: 100%;
+  margin: 0;
+}
+
+.box {
+  background-color: #ffe7b2;
+  text-align: center;
+  background: rgba(255, 255, 255, 0.3);
+  height: 100%;
+  width: 850px;
+  border-left-color: #717171;
+  border-right-color: #717171;
+  border-bottom-style: none;
+  border-top-style: none;
+}
+
+.big {
 
 }
 
-h1{
-    color: #f1174d;
+@use postcss-preset-env {
+  stage: 0;
 }
 
-h2{
-    color: saddlebrown;
+/* helpers/accessibility.css */
+
+.invisible {
+  left: -999px;
+  overflow: hidden;
+  position: absolute;
+  top: -999px;
 }
 
-.sqr{
-    width: max-content;
-    height: max-content;
-    color: lightslategray;
-    border: 5px darkslateblue;
+/* helpers/align.css */
+
+.align {
+  display: grid;
+  place-items: center;
 }
 
-#square {
-  width: 100px;
-  height: 100px;
-  background: red;
+/* layout/base.css */
+
+:root {
+  --body-background-color: #000000;
+  --body-color: #000000;
 }
+
+body {
+  background-color: var(--body-background-color);
+  color: var(--body-color);
+  margin: 0;
+  min-block-size: 100vh;
+}
+
+/* modules/anchor.css */
+
+a {
+  color: inherit;
+  outline: 0;
+}
+
+/* modules/icon.css */
+
+.icons {
+  display: none;
+}
+
+.icon {
+  block-size: 1em;
+  display: inline-block;
+  fill: currentcolor;
+  inline-size: 1em;
+  vertical-align: middle;
+}
+
+.icon--2x {
+  font-size: 7rem;
+}
+
+/* modules/image.css */
+
+svg {
+  max-inline-size: 100%;
+}
+
+/* modules/navigation.css */
+
+:root {
+  --navigation-background-color: #d9e8ff;
+  --navigation-border-radius: 0.25em;
+
+  --navigation-anchor-padding: 1.5em;
+}
+
+.navigation {
+  background-color: var(--navigation-background-color);
+  border-radius: var(--navigation-border-radius);
+  box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.3);
+}
+
+.navigation ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.navigation a {
+  display: block;
+  padding: var(--navigation-anchor-padding);
+  position: relative;
+  text-decoration: none;
+}
+
+.navigation a:focus::after,
+.navigation a:hover::after {
+  opacity: 1;
+}
+
+.navigation a::after {
+  block-size: 100%;
+  box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.3);
+  content: '';
+  inline-size: 100%;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  transition: opacity 0.3s;
+}
+
+.navigation--inline ul {
+  display: flex;
+}
+
+
+h1 {
+    color: #000000;
+}
+
+h2 {
+    color: #3f3f3f;
+    border: #d9e8ff;
+}
+
+
